    o #636988 by Steve McKenzie: Wrong ajax data could be sent in rare circumstances when using AJAX paging.
    o #576386 by jmorahan: Fix book sort help text to be more accurate by not telling you to do something that will not work.
    o #348130 by dereine: "<Any>" should not be translatable since it looks like HTML.
    o #630430 by cafuego: Fix typo in argument text.

  Other changes:
    o #580320 by chaps2: Allow "always use more link" setting.
    o #363516 by dagmar: Validate the uniqueness of exposed filter identifiers.
    o #584880 by drewish: Wrong base field declarations fixed.
    o #480162 by dereine: Count whitespace fields as empty for hiding labels.
    o #623580 by dagmar: Move can_expose() method to base handler to deal with validation change made in previous commit.
    o #626422 by vgarvardt: Static caching of validated taxonomy terms to improve taxonomy_term performance.
    o #622608: Allow attachments to inherit pager data.
    o #495606 by Roi Danton and dereine: Introduce views_get_view_result() as a fast way to get just the results of a view.
    
Views 2.7 (Nov 02, 2009)
  Bug fixes:
    o Table style when not overriding sorts put sorts in wrong order.
    o #488908 by sl27257: "Node: Has new content" only worked when exposed.
    o #451110 by wonder95: Fixed missing word in transform case help text.
    o #385904 by JirkaRybka: Prevent duplication of id edit-submit on views exposed form.
    o #489888 by TheRec: Remove erroneous "alt" attribute from <a> when using link rewriting.
    o #499078 by Darren Oh: Make sure theme is initialized for pre_render hook.
    o #490516 by v_20q: Some fields not properly being marked as translatable due to option unpacking bug.
    o #484222 by dereine: Attachment displays were ignoring access settings.
    o #503098 by Davide Goode: Feed displays should have link displays since they link to a page display.