@@ -1,4 +1,4 @@
-// $Id: ajax.js,v 1.26.2.1 2009-11-18 20:17:12 merlinofchaos Exp $
+// $Id: ajax.js,v 1.26.2.2 2009-11-30 22:47:05 merlinofchaos Exp $
 /**
  * @file ajax_admin.js
  *
@@ -25,7 +25,7 @@ Drupal.Views.Ajax.setForm = function(title, output) {
  *   the id to append via $(key).append(value)
  * - 'replace': This is a keyed array of HTML output to add via replace. The key is
  *   the id to append via $(key).html(value)
- * 
+ *
  */
 Drupal.Views.Ajax.ajaxResponse = function(data) {
   $('a.views-throbbing').removeClass('views-throbbing');
@@ -53,11 +53,11 @@ Drupal.Views.Ajax.ajaxResponse = function(data) {
     if (data.url) {
       var ajax_area = Drupal.settings.views.ajax.id;
       var ajax_title = Drupal.settings.views.ajax.title;
-    
+
       // Bind a click to the button to set the value for the button.
       $('input[type=submit], button', ajax_area).unbind('click');
       $('input[type=submit], button', ajax_area).click(function() {
-        $('form', ajax_area).append('<input type="hidden" name="' 
+        $('form', ajax_area).append('<input type="hidden" name="'
           + $(this).attr('name') + '" value="' + $(this).val() + '">');
         $(this).after('<span class="views-throbbing">&nbsp</span>');
       });
@@ -67,7 +67,7 @@ Drupal.Views.Ajax.ajaxResponse = function(data) {
       $('form', ajax_area).submit(function(arg) {
         $(this).ajaxSubmit({
           url: data.url,
-          data: '',
+          data: { 'js': 1 },
           type: 'POST',
           success: Drupal.Views.Ajax.ajaxResponse,
           error: function() { $('span.views-throbbing').remove(); alert(Drupal.t("An error occurred at @path.", {'@path': data.url})); },
@@ -86,7 +86,7 @@ Drupal.Views.Ajax.ajaxResponse = function(data) {
     $('#edit-save').removeAttr('disabled');
     // Trigger an update for the live preview when we reach this state:
     $('#views-ui-preview-form').trigger('submit');
-  } 
+  }
 
   // Go through the 'add' array and add any new content we're instructed to add.
   if (data.add) {
@@ -118,7 +118,7 @@ Drupal.Views.Ajax.ajaxResponse = function(data) {
       $('#views-tabset').clickTab(instance.$tabs.length);
     }
   }
-  
+
   if (data.hilite) {
     $('.hilited').removeClass('hilited');
     $(data.hilite).addClass('hilited');
@@ -161,11 +161,11 @@ Drupal.Views.Ajax.previewResponse = function(data) {
     var url = $(ajax_area, 'form').attr('action');
 
     // if a URL was supplied, bind the form to it.
-    if (url) {   
+    if (url) {
       // Bind a click to the button to set the value for the button.
       $('input[type=submit], button', ajax_area).unbind('click');
       $('input[type=submit], button', ajax_area).click(function() {
-        $('form', ajax_area).append('<input type="hidden" name="' 
+        $('form', ajax_area).append('<input type="hidden" name="'
           + $(this).attr('name') + '" value="' + $(this).val() + '">');
         $(this).after('<span class="views-throbbing">&nbsp</span>');
       });
@@ -175,7 +175,7 @@ Drupal.Views.Ajax.previewResponse = function(data) {
       $('form', ajax_area).submit(function() {
         $(this).ajaxSubmit({
           url: url,
-          data: '',
+          data: { 'js': 1 },
           type: 'POST',
           success: Drupal.Views.Ajax.previewResponse,
           error: function() { $('span.views-throbbing').remove(); alert(Drupal.t("An error occurred at @path.", {'@path': url})); },
@@ -196,7 +196,7 @@ Drupal.Views.updatePreviewForm = function() {
   $('input[type=submit], button', this).after('<span class="views-throbbing">&nbsp</span>');
   $(this).ajaxSubmit({
     url: url,
-    data: '',
+    data: { 'js': 1 },
     type: 'POST',
     success: Drupal.Views.Ajax.previewResponse,
     error: function() { $('span.views-throbbing').remove(); alert(Drupal.t("An error occurred at @path.", {'@path': url})); },
@@ -214,7 +214,7 @@ Drupal.Views.updatePreviewFilterForm = function() {
   $('input[name=q]', this).remove(); // remove 'q' for live preview.
   $(this).ajaxSubmit({
     url: url,
-    data: '',
+    data: { 'js': 1 },
     type: 'GET',
     success: Drupal.Views.Ajax.previewResponse,
     error: function() { $('span.views-throbbing').remove(); alert(Drupal.t("An error occurred at @path.", {'@path': url})); },
@@ -234,14 +234,14 @@ Drupal.Views.updatePreviewLink = function() {
   $(this).addClass('views-throbbing');
   $.ajax({
     url: url,
-    data: '',
+    data: 'js=1',
     type: 'POST',
     success: Drupal.Views.Ajax.previewResponse,
     error: function() { $(this).removeClass('views-throbbing'); alert(Drupal.t("An error occurred at @path.", {'@path': url})); },
     dataType: 'json'
   });
 
-  return false;   
+  return false;
 }
 
 Drupal.behaviors.ViewsAjaxLinks = function() {
@@ -257,19 +257,19 @@ Drupal.behaviors.ViewsAjaxLinks = function() {
 
     // Disable the save button.
     $('#edit-save').attr('disabled', 'true');
-    
+
     $(this).addClass('views-throbbing');
     $.ajax({
       type: "POST",
       url: url,
-      data: '',
+      data: 'js=1',
       success: Drupal.Views.Ajax.ajaxResponse,
       error: function() { $(this).removeClass('views-throbbing'); alert(Drupal.t("An error occurred at @path.", {'@path': url})); },
       dataType: 'json'
     });
-    
+
     return false;
-  });  
+  });
 
   $('form.views-ajax-form:not(.views-processed)').addClass('views-processed').submit(function(arg) {
     // Translate the href on the link to the ajax href. That way this degrades
@@ -280,14 +280,14 @@ Drupal.behaviors.ViewsAjaxLinks = function() {
 //    $('input[@type=submit]', this).after('<span class="views-throbbing">&nbsp</span>');
     $(this).ajaxSubmit({
       url: url,
-      data: '',
+      data: { 'js': 1 },
       type: 'POST',
       success: Drupal.Views.Ajax.ajaxResponse,
       error: function() { $('span.views-throbbing').remove(); alert(Drupal.t("An error occurred at @path.", {'@path': url})); },
       dataType: 'json'
     });
 
-    return false;   
+    return false;
   });
 
   // Bind the live preview to where it's supposed to go.
@@ -308,6 +308,6 @@ Drupal.behaviors.ViewsAjaxLinks = function() {
 /**
  * Get rid of irritating tabledrag messages
  */
-Drupal.theme.tableDragChangedWarning = function () { 
+Drupal.theme.tableDragChangedWarning = function () {
   return '<div></div>';
 }
